# chip8emulator

./: CMakeLists.txt
src/: constants.h  cpu.cxx  cpu.h  main.cxx  random.h  renderer.cxx  renderer.h  utils.cxx  utils.h
tests/: cpu_tests.cxx
